Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_tap-jira-mcp.yml
+++ b/.github/workflows/main_tap-jira-mcp.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -28,15 +28,12 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,20 +50,17 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C88B92D647A142459D1AD62CEC997804 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5969EDD9F41342439D925DB330288E9E }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_63EFD3FC088E45299F683A34325653E3 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B15A929B65094F41880C47FFE26AD9D3 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_942B6793B0274E25B2E407ACF873BD3A }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9A19807AA2464DC3B6A1907DB0B1C3DB }}
 
       - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
         with:
           app-name: 'TAP-JIRA-MCP'
           slot-name: 'Production'
